force-app/main/default/objects/Asset/fields/Apartment__c.field-meta.xml
<CustomField>
    <fullName>Apartment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Apartment</description>
    <label>Apartment</label>
    <referenceTo>Apartment__c</referenceTo>
    <relationshipName>ApartmentAssets</relationshipName>
    <type>Lookup</type>
</CustomField>