force-app/main/default/objects/Asset/fields/Asset_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Asset_Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Warranty OLD</label>
    <referenceTo>AssetWarranty</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>