force-app/main/default/objects/Asset/fields/Assets_related_notes__c.field-meta.xml
<CustomField>
    <fullName>Assets_related_notes__c</fullName>
    <description>Short notes regarding the customer&apos;s assets.</description>
    <formula>Account.Assets_related_notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Short notes regarding the customer&apos;s assets.</inlineHelpText>
    <label>Assets related notes OLD</label>
    <type>Text</type>
</CustomField>