force-app/main/default/objects/Asset/fields/Combination_name__c.field-meta.xml
<CustomField>
    <fullName>Combination_name__c</fullName>
    <description>Used to provide more details in Asset selection in Reclamation/Warranty Case creation from Account.</description>
    <formula>Name  &amp; &quot; (Plan: &quot; &amp; Configuration_Product__r.Configuration__r.Plan_Name__c &amp; &quot;, RVN: &quot; &amp;  SerialNumber &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combination name</label>
    <type>Text</type>
</CustomField>