force-app/main/default/objects/Asset/fields/Configuration_Product__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Configuration Product related to the WOLI.</description>
    <label>Configuration Product OLD</label>
    <referenceTo>Configuration_Product__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>