force-app/main/default/objects/Asset/fields/GlassSurface__c.field-meta.xml
<CustomField>
    <fullName>GlassSurface__c</fullName>
    <label>Blinds Surface</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>