force-app/main/default/objects/Asset/fields/ProductLength__c.field-meta.xml
<CustomField>
    <fullName>ProductLength__c</fullName>
    <label>Product Length</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>