force-app/main/default/objects/Asset/fields/ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Territory which handled this Asset.</description>
    <inlineHelpText>Service Territory which handled this Asset.</inlineHelpText>
    <label>Service Territory OLD</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>