force-app/main/default/objects/Asset/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates the asset type. E.g. for Reclamation there is different handling in automation. 
Automation sets this when asset gets created.</description>
    <label>Type OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reclamation</fullName>
            </value>
            <value>
                <fullName>Normal installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>