force-app/main/default/objects/Asset/recordTypes/Plan.recordType-meta.xml
<RecordType>
    <fullName>Plan</fullName>
    <active>true</active>
    <label>Plan</label>
</RecordType>