force-app/main/default/objects/Asset/listViews/Registered_Assets.listView-meta.xml
<ListView>
    <fullName>Registered_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Registered</value>
    </filters>
    <label>Registered Assets</label>
</ListView>